Deliver added back

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,5 +16,9 @@ pipeline {
                 }
             }
         }
+      stage('Deliver')
+       {
+        echo "Finally, we are able to update script...hurry"
+       }
     }
 }
