--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,12 @@
 pipeline {
    agent any
     stages {
+       stage('Clean Old Build')
+       {
+          steps{
+             deleteDir()
+          }
+       }
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
