--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,7 +24,9 @@ pipeline {
         }
       stage('Deliver')
        {
-        echo "Finally, we are able to update script...hurry"
+          steps {
+            echo "Finally, we are able to update script...hurry"
+          }
        }
     }
 }
